Add event system support and some bug fix